--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(StockTrader)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_library(StockTrader src/library_test.cpp include/stockReader.h)
+add_library(StockTrader src/library_test.cpp include/stockReader.h include/json.h include/meta.h)
 
 include_directories(include)
 
